[project]
name = "dash-app-render-deployment"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dash==2.9.3",
    "gunicorn>=23.0.0",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "scikit-learn>=1.7.1",
    "setuptools>=80.9.0",
]
